# persona-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.prod.yml  docker-compose.prod.yml  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/assets/: common-passwords.txt  english_word_freq.json  models.toml  sentiment_lexicon.json
backend/migrations/: 20260425000000_init.down.sql  20260425000000_init.sql  20260426000000_eras_updated_at.sql  20260426000001_provider_configs.sql
backend/src/: audit.rs  config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/auth/: csrf.rs  middleware.rs  mod.rs  password.rs  session.rs
backend/src/email/: mod.rs  resend.rs
backend/src/repositories/: chats.rs  documents.rs  eras.rs  invites.rs  mod.rs  personas.rs  provider_configs.rs  style_profiles.rs  users.rs
backend/src/routes/: admin.rs  auth.rs  chat.rs  data_rights.rs  documents.rs  export.rs  health.rs  mod.rs  personas.rs  profile.rs  providers.rs
backend/src/services/: analysis_runner.rs  broadcast.rs  chunker.rs  cleanup.rs  embedder.rs  idempotency.rs  ingest.rs  invites.rs  llm.rs  mod.rs  model_check.rs  parser.rs  prompt.rs  retriever.rs  transcriber.rs  worker.rs
backend/src/services/analysis/: exemplars.rs  lexical.rs  mod.rs  semantic.rs  stylistic.rs  syntactic.rs
backend/src/services/providers/: detect.rs  embeddings.rs  encrypt.rs  llm.rs  mod.rs  transcription.rs
backend/tests/: auth_edge_cases.rs  brute_force.rs  chat_rag.rs  document_crud.rs  era_crud.rs  invite_edge_cases.rs  persona_crud.rs  profile_crud.rs  user_isolation.rs  worker_jobs.rs
deploy/: README.md  persona-ai-backend.container  persona-ai-db.container  persona-ai-web.container  persona-ai.network
docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-design-system.md  04-models.md  05-engineering-practices.md  06-api-conventions.md  07-data-lifecycle.md  08-security.md  README.md  runbook.md
docs/reference/: training-methodology.md
docs/sprints/: sprint-01-foundation.md  sprint-02-personas.md  sprint-03-ingestion.md  sprint-04-analysis.md  sprint-05-chat-rag.md  sprint-06-export.md  sprint-07-polish-deploy.md  sprint-08-multilang-providers.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.playwright.json  vite.config.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts  personas.spec.ts
frontend/e2e/helpers/: mock-api.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  PersonaSwitcher.tsx  PersonaWorkspaceLayout.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
frontend/src/lib/: api.ts  auth.ts  chats.ts  documents.ts  personas.ts  profile.ts  theme.ts  utils.ts
frontend/src/pages/: AcceptInvite.tsx  ForgotPassword.tsx  Integrations.tsx  Login.tsx  Personas.tsx  ResetPassword.tsx  Settings.tsx
frontend/src/pages/admin/: Audit.tsx  Errors.tsx  Invites.tsx  Jobs.tsx  Users.tsx
frontend/src/pages/personas/: Chat.tsx  Dashboard.tsx  Documents.tsx  Eras.tsx  PersonaSettings.tsx  Upload.tsx
frontend/src/styles/: globals.css
scripts/: backup.sh  download-models.sh  healthcheck.sh
