[package]
name = "persona-ai"
version = "0.1.0"
edition = "2021"
default-run = "persona-ai"

[[bin]]
name = "persona-ai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "compression-gzip", "request-id"] }

# Sessions
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }

# Rate limiting
tower_governor = { version = "0.4", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros"] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# Randomness
rand = "0.8"

# HTTP client (Resend)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Image processing (avatar upload: resize + WebP encode + EXIF strip)
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
# MIME-type detection from magic bytes (not Content-Type header)
infer = "0.15"

# System
num_cpus = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "20"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
