[package]
name = "persona-ai"
version = "0.1.0"
edition = "2021"
default-run = "persona-ai"

[[bin]]
name = "persona-ai"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "compression-gzip", "request-id"] }

# Sessions
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }

# Rate limiting
tower_governor = { version = "0.4", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros"] }

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
subtle = "2"
# HKDF key derivation for provider API key encryption
hkdf = "0.12"
# AES-GCM encryption for provider API keys
aes-gcm = "0.10"

# Randomness
rand = "0.8"

# HTTP client (Resend)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Image processing (avatar upload: resize + WebP encode + EXIF strip)
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
# MIME-type detection from magic bytes (not Content-Type header)
infer = "0.15"

# System
num_cpus = "1"
libc = "0.2"
tempfile = "3"
walkdir = "2"

# Vector type for pgvector (0.4.x is compatible with sqlx 0.8)
pgvector = { version = "0.4", features = ["sqlx"] }
# Embeddings via ONNX Runtime
# ort-load-dynamic: load libonnxruntime.so at runtime (pre-installed on server)
# online disabled: model must be pre-downloaded to model_dir (privacy requirement)
fastembed = { version = "3", default-features = false, features = ["ort-load-dynamic"] }
# Audio transcription via whisper.cpp (requires C++ toolchain and cmake to compile)
# Gated behind the "whisper" feature so CI can build without a full C++ toolchain.
# On the dev box: cargo build --features whisper
whisper-rs = { version = "0.11", optional = true }
# Text chunking with sentence awareness
text-splitter = { version = "0.13", features = ["tokenizers"] }
# HuggingFace tokenizer for accurate token counting (0.19.x matches text-splitter 0.13)
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
# Zip archive support for docx zip-bomb detection
zip = { version = "2", default-features = false, features = ["deflate"] }
# Document parsers
docx-rs = "0.4"
lopdf = "0.34"
# Encoding detection for plain text files
encoding_rs = "0.8"
# Async streams for SSE
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# Async trait support for provider abstraction layer
async-trait = "0.1"
# Unicode NFC normalization
unicode-normalization = "0.1"
# Parallel iterators for CPU-bound analysis pipeline
rayon = "1"
# Language detection (English, Malay, Chinese, Tamil)
lingua = { version = "1", default-features = false, features = [
    "english", "malay", "chinese", "tamil"
] }
# Per-user concurrency tracking for chat generation
dashmap = "6"
# Local LLM via llama.cpp (requires C++ toolchain + GGUF file; optional)
llama-cpp-2 = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "20"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "macros"] }

[features]
whisper = ["dep:whisper-rs"]
llm = ["dep:llama-cpp-2"]

[profile.release]
opt-level = 3
lto = "thin"
